CHANGES
=======

master
------
* PATENTS: Updated to version 2 (http://fb.me/patents2)
* fileutils: added `readfilebytes`, `writefilebytes` for raw binary bulk IO
* SelectTask: play more nicely with frameworks that steal sys.stdout

0.7.2
------
* bugfix: Unbreak default values for VService options with names with underscores
* bugfix: Improve stability of dbus implementation with multithreading
* PeriodicTask.execute_async(): returns a future that succeeds or raises upon successful
  completion (or an exception occurs) in the next execute call.
* dbus: Allow dbus to be used (e.g., for signal handling) even if thrift isn't installed
* dbus: Added support for system bus by passing --{task}-system-bus
* TryLater.after: implement after kwarg to TryLater to wait seconds before retrying (PeriodicTask)
* Updated six dependency to require >= 1.5.0

0.7.1
-----
* bugfix: pypi 0.7.0 release has broken logging due to uncommitted changes.  Use 0.7.1 instead.
* VService.DEFAULT_LOGFILE and --logfile option to log to a file instead of stderr
* bugfix: race condition in tasks.select popen helpers bay result in false negative result
* bugfix: VTask.OPT_PREFIX can now contain "-"
* `sparts.tasks.tui` introduces a UITask suitable for building npycurses UIs that play nicely with sparts
* `sparts.collections` introduces a PriorityQueue and UniqueQueue
* `sparts.tasks.select` introduces a SelectTask, helpers for working with Popen
* `sparts.tasks.queue` introduces a PriorityQueueTask and UniqueQueueTask

0.6.1
------
* Fix vservice initialization when daemonize is not installed
* Add `map` and `submit` API to QueueTask

0.6.0
-----
* Support for POSIX daemonization helpers (--daemonize, --kill, --status, etc) if `daemonize` is installed.
* ThriftHandlerTask subclasses now verify it implements MODULE.Iface
* `QueueTask` new counters: queue_depth, n_trylater, n_unhandled, n_completed, execute_duration_ms
* Add http-based thrift support to sparts.thrift.client