@@ -6,6 +6,7 @@ master
 * PATENTS: Updated to version 2 (http://fb.me/patents2)
 * fileutils: added `readfilebytes`, `writefilebytes` for raw binary bulk IO
 * SelectTask: play more nicely with frameworks that steal sys.stdout
+* DirectoryWatcherTask: log warning instead of crash if directory doesn't exist
 
 0.7.2
 ------
